# SearchMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
docker/: entrypoint.sh  supervisord.conf
docker/searxng/: settings.yml
docs/: INDEX.md  web-mcp-implementation.md
src/web_mcp/: __init__.py  config.py  server.py
src/web_mcp/search/: __init__.py  base.py  fallback.py  google.py  provider_registry.py  relevance.py  searxng.py
src/web_mcp/tools/: __init__.py  fetch_content.py  suggestions.py  web_search.py
src/web_mcp/utils/: __init__.py  content_extractor.py  logger.py  rate_limiter.py  validation.py
tests/: test_base.py  test_content_extractor.py  test_fallback.py  test_fetch_content.py  test_google.py  test_provider_registry.py  test_rate_limiter.py  test_relevance.py  test_searxng.py  test_server.py  test_smoke_script.py  test_suggestions.py  test_web_search.py
